--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
+    <link
+    href="https://fonts.googleapis.com/css?family=Montserrat"
+    rel="stylesheet"
+  />
 </head>
 <body class="mat-typography">
   <app-root></app-root>
