--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     href="https://fonts.googleapis.com/css?family=Montserrat"
     rel="stylesheet"
   />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
